<resources>

    <!-- Application -->
    <string name="app_name">Vinotes</string>
    <string name="action_settings">Settings</string>

    <!-- Account Authentication / Registration -->
    <string name="auth_error_token_type">Invalid auth token type</string>
    <string name="auth_pref_title">Vinotes Preferences</string>
    <string name="registration_error_password_mismatch">Passwords do not match</string>

    <!-- Activity / Fragment Titles -->
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_note_add">Add New Tasting Note</string>
    <string name="title_note_edit">Edit Tasting Note</string>
    <string name="title_winery_select">Select Winery</string>
    <string name="title_wine_select">Select Wine</string>
    <string name="title_traits_default_select">Select Unknown Traits</string>
    <string name="title_traits_color_select">Select Color Traits</string>
    <string name="title_traits_nose_select">Select Nose Traits</string>
    <string name="title_traits_taste_select">Select Taste Traits</string>
    <string name="title_traits_finish_select">Select Finish Traits</string>

    <!-- Buttons -->
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_note_add">Add Note</string>
    <string name="button_note_save">Save Note</string>
    <string name="button_winery_add">Add Winery</string>
    <string name="button_wine_add">Add Wine</string>
    <string name="button_trait_add">Add Trait</string>
    <string name="button_traits_clear">Clear</string>
    <string name="button_traits_select">Done</string>

    <!-- Labels -->
    <string name="label_account_existing_user">Already have an account?</string>
    <string name="label_account_new_user">New user?</string>
    <string name="label_tasting_date">Tasting Date</string>
    <string name="label_winery">Winery</string>
    <string name="label_wine">Wine</string>
    <string name="label_color_traits">Color Traits</string>
    <string name="label_nose_traits">Nose Traits</string>
    <string name="label_taste_traits">Taste Traits</string>
    <string name="label_finish_traits">Finish Traits</string>

    <!-- Input Hints -->
    <string name="input_hint_account_email">Enter Email Address</string>
    <string name="input_hint_account_password">Enter Password</string>
    <string name="input_hint_account_password_repeat">Enter Password Again</string>
    <string name="input_hint_tasting_date_select">Enter Tasting Date</string>
    <string name="input_hint_winery_add">Enter Name Of Winery</string>
    <string name="input_hint_winery_search">Search Wineries</string>
    <string name="input_hint_winery_select">Select Winery</string>
    <string name="input_hint_wine_add_name">Enter Name Of Wine</string>
    <string name="input_hint_wine_add_vintage">Enter Vintage Of Wine</string>
    <string name="input_hint_wine_search">Search Wines</string>
    <string name="input_hint_wine_select">Select Wine</string>
    <string name="input_hint_trait_add">Enter Name Of Trait</string>
    <string name="input_hint_trait_search">Search Traits</string>
    <string name="input_hint_color_traits_select">Select Color Traits</string>
    <string name="input_hint_nose_traits_select">Select Nose Traits</string>
    <string name="input_hint_taste_traits_select">Select Taste Traits</string>
    <string name="input_hint_finish_traits_select">Select Finish Traits</string>

    <!-- Progress Dialogs -->
    <string name="progress_fetch_data">Loading data...</string>
    <string name="progress_save_winery">Saving winery...</string>
    <string name="progress_save_wine">Saving wine...</string>
    <string name="progress_save_trait">Saving trait...</string>
    <string name="progress_save_note">Saving note...</string>

</resources>
