<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        tools:context="com.robcutmore.vinotes.ui.ManageNoteActivity">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/label_tasting_date" />

        <EditText
            android:id="@+id/etTastingDate"
            android:editable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/input_hint_tasting_date_select"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="showDatePickerDialog"
            android:padding="@dimen/default_padding" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/label_winery" />

        <EditText
            android:id="@+id/etWinery"
            android:editable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/input_hint_winery_select"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="showWineryPicker"
            android:padding="@dimen/default_padding" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/label_wine" />

        <EditText
            android:id="@+id/etWine"
            android:editable="false"
            android:enabled="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/input_hint_wine_select"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="showWinePicker"
            android:padding="@dimen/default_padding" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/label_color_traits" />

        <EditText
            android:id="@+id/etColorTraits"
            android:editable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/input_hint_color_traits_select"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="showTraitPicker"
            android:padding="@dimen/default_padding" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/label_nose_traits" />

        <EditText
            android:id="@+id/etNoseTraits"
            android:editable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/input_hint_nose_traits_select"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="showTraitPicker"
            android:padding="@dimen/default_padding" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/label_taste_traits" />

        <EditText
            android:id="@+id/etTasteTraits"
            android:editable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/input_hint_taste_traits_select"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="showTraitPicker"
            android:padding="@dimen/default_padding" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/label_finish_traits" />

        <EditText
            android:id="@+id/etFinishTraits"
            android:editable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint="@string/input_hint_finish_traits_select"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:onClick="showTraitPicker"
            android:padding="@dimen/default_padding" />

        <RatingBar
            android:id="@+id/rbRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0" />

        <Button
            android:id="@+id/btnSave"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="saveNote"
            android:padding="@dimen/default_padding"
            android:text="@string/button_note_save" />

    </LinearLayout>

</ScrollView>